syntax = "proto3";

package base;

option go_package = "xgo/tests/pb/pbbase";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "tests/proto/cases/base/private.proto";

import "tests/proto/module/external.proto";

import "proto/json.proto";

// MessagePlain1 used tests cases in this file.
message MessagePlain1 {
  message Embed1 {
    message Embed2 {
      string f_string1 = 1 [ (json.field) = { } ];
      string f_string2 = 2 [ (json.field) = { } ];
      string f_string3 = 3 [ (json.field) = { } ];
    }
    string f_string1 = 1 [ (json.field) = { } ];
    string f_string2 = 2 [ (json.field) = { } ];
    string f_string3 = 3 [ (json.field) = { } ];
  }
  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}

// Test case for field plain.
message TypePlain1 {
  // EnumNum1 used tests cases in this file.
  enum EnumNum1 {
    Zero  = 0;
    One   = 2;
    Two   = 3;
    Three = 5;
    Four  = 6;
    Five  = 7;
    Six   = 9;
    Seven = 11;
    Eight = 12;
    Nine  = 15;
    Ten   = 17;
  }
  int32    f_int32    = 1 [ (json.field) = { } ];
  int64    f_int64    = 2 [ (json.field) = { } ];
  uint32   f_uint32   = 3 [ (json.field) = { } ];
  uint64   f_uint64   = 4 [ (json.field) = { } ];
  sint32   f_sint32   = 5 [ (json.field) = { } ];
  sint64   f_sint64   = 6 [ (json.field) = { } ];
  sfixed32 f_sfixed32 = 7 [ (json.field) = { } ];
  sfixed64 f_sfixed64 = 8 [ (json.field) = { } ];
  fixed32  f_fixed32  = 9 [ (json.field) = { } ];
  fixed64  f_fixed64  = 10 [ (json.field) = { } ];
  float    f_float    = 11 [ (json.field) = { } ];
  double   f_double   = 12 [ (json.field) = { } ];

  bool f_bool1 = 13 [ (json.field) = { } ];

  string f_string1 = 14 [ (json.field) = { } ];
  string f_string2 = 15 [ (json.field) = { } ];

  bytes f_bytes1 = 16 [ (json.field) = { } ];

  EnumNum1                        f_enum1 = 21 [ (json.field) = { } ];
  external.EnumNum1               f_enum2 = 22 [ (json.field) = { } ];
  external.Embed.EnumNum1         f_enum3 = 23 [ (json.field) = { } ];
  external.Embed.Message.EnumNum1 f_enum4 = 24 [ (json.field) = { } ];
  private.EnumNum1                f_enum5 = 25 [ (json.field) = { } ];
  private.MessageCommon1.EnumNum1 f_enum6 = 26 [ (json.field) = { } ];

  MessagePlain1                        f_message1 = 31 [ (json.field) = { } ];
  MessagePlain1.Embed1                 f_message2 = 32 [ (json.field) = { } ];
  MessagePlain1.Embed1.Embed2          f_message3 = 33 [ (json.field) = { } ];
  external.Message1                    f_message4 = 34 [ (json.field) = { } ];
  external.Message1.Embed1             f_message5 = 35 [ (json.field) = { } ];
  external.Message1.Embed1.Embed2      f_message6 = 36 [ (json.field) = { } ];
  private.MessageCommon1               f_message7 = 37 [ (json.field) = { } ];
  private.MessageCommon1.Embed1        f_message8 = 38 [ (json.field) = { } ];
  private.MessageCommon1.Embed1.Embed2 f_message9 = 39 [ (json.field) = { } ];

  google.protobuf.Any f_any1 = 41 [ (json.field) = { } ];
  google.protobuf.Any f_any2 = 42 [ (json.field) = { } ];

  google.protobuf.Duration f_duration1 = 43 [ (json.field) = { } ];
  google.protobuf.Duration f_duration2 = 44 [ (json.field) = { } ];

  google.protobuf.Timestamp f_timestamp1 = 45 [ (json.field) = { } ];
  google.protobuf.Timestamp f_timestamp2 = 46 [ (json.field) = { } ];
}
